<resources>
    <string name="app_name">Meesho</string>
    <string name="scan_now">Scan Now</string>
    <string name="end_scan">End</string>
    <string name="location_details">Please scan QR code to see details :</string>
    <string name="address">Address : %1$s</string>
    <string name="location_id">Location Id : %1$s</string>
    <string name="price">Price : %1$s</string>
    <string name="total_charges">Charges : %1$s</string>
    <string name="duration"> Duration: Hour %1$s Minutes: %2$s Seconds: %3$s</string>
    <string name="qr_read_error">Error in reading QR code!</string>
    <string name="qr_no_result">No data found in QR code!</string>
    <string name="submission_success">Data submitted successfully</string>
    <string name="submission_error">Error occurred while submitting data</string>
    <string name="loading">Submitting data. Please wait…</string>
</resources>